fix: added missing space and semicolon after each property according to paragraph 3.7 Semicolon after properties

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .header {
     text-align: center;
   }
@@ -30,7 +30,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .main__newItem {
   display: flex;
@@ -116,7 +116,7 @@ label {
   width: 226px;
 }
 li > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .delete:hover {
   color: #cf2323;
@@ -132,18 +132,18 @@ li > input[type="text"] {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type="text"] {
-  display: none
+  display: none;
 }
 
 .editMode input[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .editMode label {
